--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>To-Do List</title>
      <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+     <div class="themes">
+          <!-- <i class="fa-solid fa-3x fa-sun"></i> -->
+          <i class="fa-solid fa-3x fa-moon"></i>
+     </div>
+
      <div class="container">
+
           <h1 id="heading">To-Do List</h1>
           <input type="text" name="list" id="listId">
           <button id="addItem" onclick="addItemToList()" type="button">+</button>
